# NSCLC_CD8_states

./: .gitignore  README.md  pyproject.toml
scripts/: extract_figshare_studies.R
src/nsclc_tf_switch/: __init__.py  cli.py  config.py  data_access.py  interaction.py  interaction_validation.py  loom_io.py  matrix_io.py  metadata_tools.py  model.py  pipeline.py  preprocess.py  reporting.py  state_separation.py  tcga_validation.py  tf_activity.py  validation.py
tests/: test_gse171145_materialize.py  test_interaction_smoke.py  test_interaction_validation_summary.py  test_loom_io.py  test_model_transition.py  test_pipeline_smoke.py  test_state_separation.py  test_tcga_correlation.py  test_tcga_download.py  test_tf_activity_ranking.py  test_validation_summary.py
